--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "postcss.config.js",
   "dependencies": {
     "next": "^12.3.4",
+    "openai": "^4.86.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
