--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "postcss.config.js",
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "js-cookie": "^3.0.5",
     "next": "^12.3.4",
     "openai": "^4.86.2",
     "react": "^17.0.2",
