--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "^12.3.4",
     "openai": "^4.86.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "22.13.10",
